# django_login_through_google

./: db.sqlite3  pyproject.toml
apps/: forms.py  urls.py  views.py
core/: settings.py  urls.py
templates/: home.html
templates/account/: login.html  register.html
